force-app/main/default/objects/OI_Scan_Run__c/OI_Scan_Run__c.object-meta.xml
<CustomObject>
    <label>OI Scan Run</label>
    <pluralLabel>OI Scan Runs</pluralLabel>
    <nameField>
        <label>Scan Run Name</label>
        <type>AutoNumber</type>
        <displayFormat>SCAN-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>One row per Metadata Scanner execution (full or incremental) — the unit of correlation for progress tracking, logging, and cache invalidation scoping. Application-internal (ADR-0006); access is gated at the Apex boundary, not via record sharing.</description>
</CustomObject>