force-app/main/default/objects/OI_Scan_Run__c/fields/Api_Call_Budget_Used__c.field-meta.xml
<CustomField>
    <fullName>Api_Call_Budget_Used__c</fullName>
    <label>Api Call Budget Used</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>