force-app/main/default/objects/OI_Scan_Run__c/fields/Metadata_Types_Included__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Types_Included__c</fullName>
    <label>Metadata Types Included</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>