force-app/main/default/objects/OI_Scan_Run__c/fields/Node_Count__c.field-meta.xml
<CustomField>
    <fullName>Node_Count__c</fullName>
    <label>Node Count</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>