force-app/main/default/objects/OI_Scan_Run__c/fields/Scan_Type__c.field-meta.xml
<CustomField>
    <fullName>Scan_Type__c</fullName>
    <label>Scan Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Full</fullName><default>true</default><label>Full</label></value>
            <value><fullName>Incremental</fullName><default>false</default><label>Incremental</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>