force-app/main/default/objects/OI_Scan_Run__c/fields/Triggered_By__c.field-meta.xml
<CustomField>
    <fullName>Triggered_By__c</fullName>
    <label>Triggered By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>OI_Triggered_Scan_Runs</relationshipName>
    <relationshipLabel>OI Scan Runs (Triggered By)</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>